--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ScrollData</string>
+    <string name="app_name">CorticosteroidCalculator</string>
     <string name="main_background_image">main_background_image</string>
     <string name="corticosteroid_calculator">CORTICOSTEROID CALCULATOR</string>
     <string name="dose_input" />
